# ZoPlus

./: .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  api.md  check_schema.rs  package-lock.json  package.json  vite.config.ts  论文管理软件-设计规划-v1.0-已归档.txt  论文管理软件-设计规划-v1.0.txt  论文管理软件-设计规划-v2.0.txt
.claude/: settings.local.json  task-templates.md
docs/: database-structure.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  import.rs  lib.rs  logger.rs  main.rs
src-tauri/src/ai/: citation.rs  citation_commands.rs  citation_graph.rs  citation_graph_commands.rs  client.rs  commands.rs  comparison.rs  comparison_commands.rs  config.rs  errors.rs  mod.rs  models.rs  note.rs  qa.rs  rag.rs  rag_commands.rs  summary.rs  traits.rs
src-tauri/src/ai/providers/: anthropic.rs  deepseek.rs  doubao.rs  glm.rs  mimo.rs  minimax.rs  mod.rs  openai.rs  qwen.rs
src-tauri/src/db/: connection.rs  delete.rs  dynamic.rs  items.rs  metadata.rs  mod.rs  path.rs  validation.rs
src-tauri/src/pdf/: annotations.rs  commands.rs  mod.rs  storage.rs  text_extract.rs
src-tauri/src/search/: commands.rs  indexer.rs  mod.rs  query.rs  schema.rs
src-tauri/src/sync/: client.rs  commands.rs  config.rs  mod.rs  scheduler.rs
src/components/: AnnotationLayer.tsx  AnnotationList.tsx  AnnotationToolbar.tsx  ChatMessage.tsx  DbStatusAlert.tsx  DropZone.tsx  ImportButton.tsx  ItemList.tsx  NoteEditor.tsx  NoteGenerator.tsx  NoteList.tsx  PdfViewer.tsx  SearchBox.tsx  SearchResults.tsx  SummaryButton.tsx  SummaryResult.tsx  ThemeSwitch.tsx
src/pages/: AIChat.tsx  ArticleComparison.tsx  CitationFormatter.tsx  CitationGraph.tsx  Dashboard.tsx  PdfReader.tsx  Search.tsx  Settings.tsx
src/store/: appStore.ts
src/themes/: themeConfig.ts
src/utils/: tauriCommands.ts
