[package]
name = "zoplus"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zoplus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
# Tantivy 全文搜索引擎
tantivy = "0.26"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 路径操作
dirs = "5"
# 错误处理
thiserror = "2"
# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
# 字节处理
bytes = "1"
# 异步流处理
futures-util = "0.3"
# 正则表达式
regex = "1"
# 随机数生成
rand = "0.8"
# 惰性求值静态变量
lazy_static = "1.4"
# 条件编译宏
cfg-if = "1"
# chrono 时间处理
chrono = { version = "0.4", features = ["serde"] }
# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

